--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,65 @@
 body {
+    background-image: url('Design\ sem\ nome.jpg');
+    background-color: #6c6c6c;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    font-family: Arial, sans-serif;
+    height: 100vh;
+    margin: 0;
+    flex-direction: column;
+}
+
+#game {
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    text-align: center;
+}
+
+h1 {
+    font-size: 40px;
+    margin-top: 5px;
+    color: #333;
+    text-align: center;
 }
 
 #video-container {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 20px;
 }
 
-video {
-    width: 640px;
-    height: 480px;
+#video {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    width: 480px;
+    height: 320px;
+}
+
+#canvas {
+    display: none;
 }
 
 #start-button {
     padding: 10px 20px;
     font-size: 20px;
     cursor: pointer;
+    background-color: #f8af1f; 
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#countdown {
+    font-size: 24px;
+    margin-top: 10px;
 }
 
 #result {
     font-size: 24px;
+    margin-top: 20px;
 }
-
-p {
-    margin: 5px 0;
-}
-
