--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('Design\ sem\ nome.jpg');
+    background-image: url('background.jpg');
     background-color: #6c6c6c;
     display: flex;
     justify-content: center;
@@ -19,9 +19,14 @@ body {
 
 h1 {
     font-size: 40px;
-    margin-top: 5px;
+    margin-top: 50px;
     color: #333;
     text-align: center;
+}
+
+h2 {
+    font-size: 30px;
+    margin-top: 3px;
 }
 
 #video-container {
@@ -29,7 +34,7 @@ h1 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 #video {
@@ -55,11 +60,12 @@ h1 {
 }
 
 #countdown {
-    font-size: 24px;
-    margin-top: 10px;
+    font-size: 32px;
+    margin-top: 5px;
 }
 
 #result {
-    font-size: 24px;
-    margin-top: 20px;
+    font-size: 28px;
+    margin-top: 10px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
